#17 Add in-memory country client, adjust tests, remove wiremock, add first compound doc test